--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -6,11 +6,6 @@
 
         </div>
         <form class="d-flex flex-column " [formGroup]="form">
-            <mat-form-field appearance="fill" class="mx-5 mt-3 ">
-                <mat-label>Nombre</mat-label>
-                <mat-error>Campo Requerido</mat-error>
-                <input matInput type="text" formControlName="name">
-            </mat-form-field>
         <mat-form-field appearance="fill" class="mx-5 mt-3 ">
             <mat-label>Email</mat-label>
             <mat-error>Campo Requerido</mat-error>
@@ -21,7 +16,7 @@
                 <mat-error>Campo Requerido</mat-error>
                 <input matInput type="password" formControlName="password">
               </mat-form-field>
-              <button type="button" class="btn btn-outline-success mx-5">Registrarse</button>
+              <button type="button" class="btn btn-outline-success mx-5" (click)="register()">Registrarse</button>
             </form>
       </div>
       <div class=" col-md-7 col-lg-7 d-none  d-md-flex p-0 background vh-100" >
